fixed overflow issue

--- a/styles.css
+++ b/styles.css
@@ -85,7 +85,7 @@ p {
         display: none;
     }
     .logo h1 {
-        font-size: 30px;
+        font-size: 28px;
     }
   }
 
